Implement diff and update
