# src/opera/api/controllers/update_controller.py
@@ -1,6 +1,3 @@
-import connexion
-import yaml
-
 from opera.api.controllers.background_invocation import InvocationService
 from opera.api.log import get_logger
 from opera.api.openapi.models import OperationType, Invocation
@@ -16,13 +13,18 @@ SQL_database = sqldb_service.connect(Settings.sql_config)
 invocation_service = InvocationService()
 
 
-def post_undeploy(session_token, workers=1):
+def post_update(session_token, blueprint_token, version_tag=None, workers=1):
     """
+    Update
 
-     Undeploy blueprint
+    Deploys Instance model (DI2), where DI2 &#x3D; diff(DI1, (B2,V2,I2)) # noqa: E501
 
-    :param session_token: Token of deploy session
+    :param session_token: Session_token of old Deployed instance model (DI1)
     :type session_token: str
+    :param blueprint_token: Token of the new blueprint (B2)
+    :type blueprint_token: str
+    :param version_tag: Version_tag to of the new blueprint (V2)
+    :type version_tag: str
     :param workers: Number of workers
     :type workers: int
 
@@ -30,17 +32,13 @@ def post_undeploy(session_token, workers=1):
     """
     inputs = xopera_util.inputs_file()
 
-    session_data = SQL_database.get_session_data(session_token)
-    if not session_data:
-        return JustMessage(f"Session with session_token: {session_token} does not exist, cannot undeploy"), 404
-    blueprint_token = session_data['blueprint_token']
-    version_tag = session_data['version_tag']
-
+    if not SQL_database.get_session_data(session_token):
+        return JustMessage(f"Session with session_token: {session_token} does not exist, cannot update"), 404
     if not CSAR_db.version_exists(blueprint_token, version_tag):
         return JustMessage(
             f"Did not find blueprint with token: {blueprint_token} and version_id: {version_tag or 'any'}"), 404
 
-    result = invocation_service.invoke(OperationType.UNDEPLOY, blueprint_token, version_tag, session_token, workers,
-                                       inputs)
-    logger.info(f"Deploying '{blueprint_token}', version_tag: {version_tag} and session_token_old: {session_token}")
+    result = invocation_service.invoke(OperationType.UPDATE, blueprint_token, version_tag, session_token,
+                                       workers, inputs)
+    logger.info(f"Updating '{session_token}' with blueprint '{blueprint_token}', version_tag: {version_tag}")
     return result, 202
